# BanhammerBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.github-actions  README.md  README_DEV.md  bot.py  config.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  docker-build.yml
database/: models.py
handlers/: admin_handler.py  blacklist_handler.py  message_handler.py  spam_detector.py
scripts/: deploy.sh
src/: __init__.py  bot.py  config.py
src/database/: models.py
src/handlers/: admin_handler.py  blacklist_handler.py
src/utils/: logger.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_admin_handler.py  test_blacklist_check.py  test_blacklist_commands.py  test_blacklist_handler.py  test_bot_integration.py  test_config.py  test_database.py  test_database_advanced.py  test_global_blacklist_toggle.py  test_input_validation.py  test_log_channel_clear.py  test_private_forward.py  test_rate_limiter.py  test_spam_report.py  test_text_spam_report.py  test_via_bot_priority.py
utils/: logger.py
